FIX: Change details el text alignment

--- a/styles.css
+++ b/styles.css
@@ -388,9 +388,11 @@ button:active {
 }
 
 details {
+	text-align: center;
 	margin-top: .8rem;
 }
 
 p {
 	max-width: 42ch;
+	text-align: left;
 }
